--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                         <div class="single_clothe_section">
                            <img id="" class="" src="img/sample.jpg" data-zoom-image="img/sample.jpg" />
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <button id="details" href="" class="details">View Details</button>
+                              <a id="kamiz_01" href="#one" class="details">View Detais</a>
                            </div>
                         </div>
                      </div>
@@ -102,8 +101,7 @@
                         <div class="single_clothe_section">
                            <img id="" src="img/sample-2.jpg" alt="" class="">
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <a href="" class="details">View Details</a>
+                              <a id="kamiz_02" href="#two" class="details">View Details</a>
                            </div>
                         </div>
                      </div>
@@ -111,40 +109,37 @@
                         <div class="single_clothe_section">
                            <img id="" src="img/sample-3.jpg" alt="" class="">
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <a href="" class="details">View Details</a>
+                              <a id="kamiz_03" href="#three" class="details">View Details</a>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
+               <!-- chiffon  -->
                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                   <div class="row">
                      <div class="col-lg-4">
                         <div class="single_clothe_section">
-                           <img id="" src="img/sample-3.jpg" alt="" class="">
+                           <img src="img/sample-4.jpg" alt="" class="">
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <a href="" class="details">View Details</a>
+                              <a id="kamiz_04" href="#four" class="details">View Details</a>
                            </div>
                         </div>
 
                      </div>
                      <div class="col-lg-4">
                         <div class="single_clothe_section">
-                           <img id="" src="img/sample-4.jpg" alt="" class="">
+                           <img src="img/sample-5.jpg" alt="" class="">
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <a href="" class="details">View Details</a>
+                              <a id="kamiz_05" href="#five" class="details">View Details</a>
                            </div>
                         </div>
                      </div>
                      <div class="col-lg-4">
                         <div class="single_clothe_section">
-                           <img id="" src="img/sample-4.jpg" alt="" class="">
+                           <img src="img/sample-6.jpg" alt="" class="">
                            <div class="hover_section">
-                              <a href="" class="add_cart">Add to Cart</a>
-                              <a href="" class="details">View Details</a>
+                              <a id="kamiz_06" href="#six" class="details">View Details</a>
                            </div>
                         </div>
                      </div>
@@ -162,13 +157,14 @@
                <button id="back_to_main" href="">Back to main Page</button>
             </div>
          </div>
-         <div class="row align-items-center">
-            <div class="col-lg-7">
+         <!-- bagladeshi cotton item start -->
+         <div id="one" class="row align-items-center">
+            <div class="col-lg-6">
                <div class="details_img">
-                  <img id="zoom_01" class="img-fluid" src="img/sample-2.jpg" />
+                  <img id="zoom_01" class="img-fluid" src="img/sample.jpg" />
                </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-4">
                <div class="details_txt">
                   <h2>Bangladeshi 3 pieces</h2>
                   <h6 class="product_name">stylish 3 piece</h6>
@@ -180,13 +176,13 @@
                </div>
             </div>
          </div>
-         <div class="row align-items-center">
-            <div class="col-lg-7">
+         <div id="two" class=" row align-items-center">
+            <div class="col-lg-6">
                <div class="details_img">
-                  <img id="zoom_02" class="img-fluid" src="img/sample-4.jpg" />
+                  <img id="zoom_02" class="img-fluid" src="img/sample-2.jpg" />
                </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-4">
                <div class="details_txt">
                   <h2>Bangladeshi 3 pieces</h2>
                   <h6 class="product_name">Tangaili 3 piece</h6>
@@ -198,13 +194,13 @@
                </div>
             </div>
          </div>
-         <div class="row align-items-center">
-            <div class="col-lg-7">
+         <div id="three" class="row align-items-center">
+            <div class="col-lg-6">
                <div class="details_img">
-                  <img id="zoom_03" class="img-fluid" src="img/sample-2.jpg" />
+                  <img id="zoom_03" class="img-fluid" src="img/sample-3.jpg" />
                </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-4">
                <div class="details_txt">
                   <h2>Bangladeshi 3 pieces</h2>
                   <h6 class="product_name">Jessor 3 piece</h6>
@@ -216,6 +212,64 @@
                </div>
             </div>
          </div>
+         <!-- bagladeshi cotton item end -->
+
+         <!-- bagladeshi chiffon item start -->
+         <div id="four" class="row align-items-center">
+            <div class="col-lg-6">
+               <div class="details_img">
+                  <img id="zoom_04" class="img-fluid" src="img/sample-4.jpg" />
+               </div>
+            </div>
+            <div class="col-lg-4">
+               <div class="details_txt">
+                  <h2>Bangladeshi 3 pieces</h2>
+                  <h6 class="product_name">stylish 3 piece</h6>
+                  <span class="product_price">200</span>
+                  <p>Dummy Texts: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati in fugit ducimus
+                     consequuntur ut, magnam nam officiis possimus perferendis rem delectus rerum id, ea nulla corporis
+                     nobis magni? Exercitationem, corrupti.</p>
+                  <button class="add_cart btn btn-outline-primary">Add to Cart</button>
+               </div>
+            </div>
+         </div>
+         <div id="five" class=" row align-items-center">
+            <div class="col-lg-6">
+               <div class="details_img">
+                  <img id="zoom_05" class="img-fluid" src="img/sample-5.jpg" />
+               </div>
+            </div>
+            <div class="col-lg-4">
+               <div class="details_txt">
+                  <h2>Bangladeshi 3 pieces</h2>
+                  <h6 class="product_name">Tangaili 3 piece</h6>
+                  <span class="product_price">2000</span>
+                  <p>Dummy Texts: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati in fugit ducimus
+                     consequuntur ut, magnam nam officiis possimus perferendis rem delectus rerum id, ea nulla corporis
+                     nobis magni? Exercitationem, corrupti.</p>
+                  <button class="add_cart btn btn-outline-primary">Add to Cart</button>
+               </div>
+            </div>
+         </div>
+         <div id="six" class="row align-items-center">
+            <div class="col-lg-6">
+               <div class="details_img">
+                  <img id="zoom_06" class="img-fluid" src="img/sample-6.jpg" />
+               </div>
+            </div>
+            <div class="col-lg-4">
+               <div class="details_txt">
+                  <h2>Bangladeshi 3 pieces</h2>
+                  <h6 class="product_name">Jessor 3 piece</h6>
+                  <span class="product_price">1000</span>
+                  <p>Dummy Texts: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati in fugit ducimus
+                     consequuntur ut, magnam nam officiis possimus perferendis rem delectus rerum id, ea nulla corporis
+                     nobis magni? Exercitationem, corrupti.</p>
+                  <button class="add_cart btn btn-outline-primary">Add to Cart</button>
+               </div>
+            </div>
+         </div>
+         <!-- bagladeshi chiffon item end -->
       </div>
    </section>
    <!-- detaisl item end -->
@@ -230,7 +284,7 @@
                <div class="row cart-row">
                   <span class="col-4 cart-item cart-header cart-column">ITEM</span>
                   <span class="col-2 cart-price cart-header cart-column">PRICE</span>
-                  <span class="col-2">Total</span>
+                  <!-- <span class="col-2">Total</span> -->
                   <span class="col-4 cart-quantity cart-header cart-column">QUANTITY</span>
                </div>
             </div>
