--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
          <div class="row">
             <div class="col-12 text-start">
                <div class="footer_txt">
-                  <p>&copy; <span id="date"></span> ALl RIGHTS RESERVED RAJJAN CLOTHING</p>
+                  <p>&copy; <span id="date"></span> ALL RIGHTS RESERVED RAJJAN CLOTHING</p>
                   <p>Created & maintenance by <a href="https://www.linkedin.com/in/md-ishaq-ibrahim-368b07224/">Ishaq</a></p>
                </div>
             </div>
